EC-639 - Updated CustomHttpClientTest to use wiremock to ensure the request body is verified